--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,8 +1,9 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-12 10:41:44
-# Total rules: 8358
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-12 14:41:29
+# Total rules: 8353
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
+.0lovespells0.blogspot.com
 .0m1hix10po.data.adobedc.net
 .0nvdw1kkeb.data.adobedc.net
 .1.wps.cn
@@ -15,7 +16,6 @@
 .123.sogoucdn.com
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .1437953666.rsc.cdn77.org
-.1493361689.rsc.cdn77.org
 .1529462937.rsc.cdn77.org
 .1548164934.rsc.cdn77.org
 .1558334541.rsc.cdn77.org
@@ -29,6 +29,7 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
+.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2ihjjahguz.data.adobedc.net
 .2mdn.net
 .33across.com
@@ -36,8 +37,11 @@
 .360yield.com
 .365dmp.com
 .37bvsblobprodcus311.blob.core.windows.net
+.3dns-1.adobe.com
 .3dns-2.adobe.com
 .3dns-3.adobe.com
+.3dns-4.adobe.com
+.3dns.adobe.com
 .3e9le7p41u.data.adobedc.net
 .3j0pw4ed7uac-a.akamaihd.net
 .3kbmk3nerc.data.adobedc.net
@@ -921,7 +925,6 @@
 .adservergatewayprod.southcentralus.cloudapp.azure.com
 .adservice.aliexpress.com
 .adservice.google.cn
-.adservice.google.co.in
 .adservice.google.co.jp
 .adservice.google.com
 .adservice.kugou.com
@@ -1065,6 +1068,7 @@
 .ak-ns.sascdn.com
 .ak.sascdn.com
 .aksb-a.akamaihd.net
+.aktivator-windows10.blogspot.com
 .al.autohome.com.cn
 .alb.reddit.com
 .album-cn01a.ocloud.heytapmobi.com
@@ -1110,7 +1114,6 @@
 .amplitude.map.fastly.net
 .amplitude.prismic.io
 .amplitude.thepure.app.cdn.cloudflare.net
-.ampmetrics.engadget.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
 .ams-pageview-public.s3.amazonaws.com
 .an.constantcontact.com
@@ -1133,7 +1136,6 @@
 .analytics-consent-manager-v2-prod.azureedge.net
 .analytics-consent-manager.azureedge.net
 .analytics-dev-lleap-events.servicebus.windows.net
-.analytics-digit-in.cdn.ampproject.org
 .analytics-eu.cloud.coveo.com
 .analytics-fe.digital-cloud-prem.medallia.com
 .analytics-fe.digital-cloud-us-main.medallia.com
@@ -1311,7 +1313,6 @@
 .api.optimizely.com
 .api.qgraph.io
 .api.runestone.samsung.com
-.api.sec.intl.miui.com
 .api.setting.intl.miui.com
 .api.shuaji.360.cn
 .api.sms.intl.miui.com
@@ -1420,11 +1421,9 @@
 .as.mgtv.com
 .as.weixin.qq.com
 .as1.wenku.baidu.com
-.as54rdxfzxs.appspot.com
 .ascdn.baidu.com
 .ascpqnj-oam.global.ssl.fastly.net
 .asearch.alicdn.com
-.asgh65tfsdxz.appspot.com
 .asia-abeacdataonrt-stsdk.vivoglobal.com
 .asia-abeacdataort-stsdk.vivoglobal.com
 .asia-ad-mkt-vivofs.vivoglobal.com
@@ -1525,6 +1524,7 @@
 .baidutv.baidu.com
 .baifen.music.baidu.com
 .baikebcs.bdimg.com
+.baltic-pipe-finansowy.blogspot.com
 .baltic79.wordpress.com
 .balticpipe.wordpress.com
 .bam.nr-data.net.cdn.cloudflare.net
@@ -1699,6 +1699,7 @@
 .buluo.qq.com
 .business-api.tiktok.com
 .busuanzi.ibruce.info
+.buy-cheap-phentermine.blogspot.com
 .buysellads.com
 .bxtdlifzik.data.adobedc.net
 .by2.uservoice.com
@@ -1779,7 +1780,6 @@
 .capture.condenastdigital.com
 .carbonads.com
 .cards-css.iqiyi.com
-.care.help.360.cn
 .carecredit.com.data.adobedc.net
 .carecreditprovidercenter.com.data.adobedc.net
 .carmax.data.adobedc.net
@@ -1814,7 +1814,6 @@
 .cdn-pci.optimizely.com
 .cdn-s-optional.optimizely.com
 .cdn.ark.qq.com
-.cdn.cookielaw.org
 .cdn.eu.pendo.io
 .cdn.exp.xiaomi.com
 .cdn.fds.api.xiaomi.com
@@ -1863,6 +1862,8 @@
 .chartbeat.net
 .chat1.jd.com
 .chatpush.miguvideo.com
+.cheap-web-hosting-here.blogspot.com
+.cheap-xanax-here.blogspot.com
 .cheezwhiz.z9.web.core.windows.net
 .choice.microsoft.com
 .chs-matomo-1238305517.eu-west-2.elb.amazonaws.com
@@ -1884,6 +1885,7 @@
 .citrixtelemetryeh.servicebus.windows.net
 .citrixtelemetryeheu-alias.servicebus.windows.net
 .citrixtelemetryeheu.servicebus.windows.net
+.citycash2.blogspot.com
 .cjhq.baidu.com
 .cjroq.bealge.sogou.com
 .cjs-diagnostics-office-com-gvdhgwfwbbfsd9g3.z01.azurefd.net
@@ -1908,6 +1910,7 @@
 .click.oneplus.cn
 .click.oneplus.com
 .click.simba.taobao.com
+.click.stat.hao.360.cn
 .click.tanx.com
 .click.tz.simba.taobao.com
 .click.uve.mobile.sina.cn
@@ -2328,6 +2331,7 @@
 .creatives.sascdn.com
 .creatopy-adtag-production.b-cdn.net
 .creditonebank.data.adobedc.net
+.creditsoffer.blogspot.com
 .criteo.com
 .crl.microsoft.com
 .crlog-crcn.adobe.com
@@ -2348,7 +2352,6 @@
 .ctc.weather.com.cn
 .ctobsnssdk.com
 .ctr.hd.sohu.com
-.cu-cn-north00001.gala.convection.cn
 .cu-cn-north00002.gala.convection.cn
 .cub37n4jaq-default-cn.rum.aliyuncs.com
 .cub7ktzma4.data.adobedc.net
@@ -3690,7 +3693,6 @@
 .d9yk47of1efyy.cloudfront.net
 .da.mgtv.com
 .da.netease.com
-.da032opzasz.appspot.com
 .da26k71rxh0kb.cloudfront.net
 .da327va27j0hh.cloudfront.net
 .da3uf5ucdz00u.cloudfront.net
@@ -3891,7 +3893,6 @@
 .dgpp7fq3iorb.cloudfront.net
 .dgw7ae5vrovs7.cloudfront.net
 .dgyrizngtcfck.cloudfront.net
-.dgyu536ds.appspot.com
 .dh0c1bz67fuho.cloudfront.net
 .dh0uktvqfaomb.cloudfront.net
 .dh6dm31izb875.cloudfront.net
@@ -4349,7 +4350,6 @@
 .epoch-id.cdo.heytapmobi.com
 .epro.sogou.com
 .epro.sohu.com
-.eqit9pzsxz.appspot.com
 .erebor.douban.com
 .ereg.adobe.com
 .err.taobao.com
@@ -4367,7 +4367,6 @@
 .etg.qq.com
 .ethicalads.io
 .etihadairways.data.adobedc.net
-.etonynew345zzz.z13.web.core.windows.net
 .eu-album-api.vivoglobal.com
 .eu-cota.vivoglobal.com
 .eu-domaincfg.vivoglobal.com
@@ -4471,7 +4470,6 @@
 .fanatics.com.data.adobedc.net
 .fanaticscommerce.com.data.adobedc.net
 .fanxing.kugou.com
-.fasss62r9nowzzz.z13.web.core.windows.net
 .fastclick.com.edgesuite.net
 .fastly-insights.com
 .fav.simba.taobao.com
@@ -4493,7 +4491,6 @@
 .feed.baidu.com
 .feedback-c.zijieapi.com
 .feedback.miui.com
-.feedback.uc.cn
 .feedbackstorage.blob.core.chinacloudapi.cn
 .feedbackws.fe2.apple-dns.net
 .feedbackws.icloud.com
@@ -4512,6 +4509,7 @@
 .fingerprint-upload.hellobike.com
 .fingerprinter-production.herokuapp.com
 .finnews7.wordpress.com
+.fioricet-online.blogspot.com
 .firebase.googleapis.com
 .firebasecrashlytics.googleapis.com
 .firebasedynamiclinks.googleapis.com
@@ -4543,6 +4541,7 @@
 .folkrbvi.pages.dev
 .fonts.googleapis.com
 .foreign.coloros.com
+.forex-trading-benefits.blogspot.com
 .forms-emea.lenovo.com
 .forms.lenovo.com
 .fourier.alibaba.com
@@ -4640,7 +4639,6 @@
 .gb.corp.163.com
 .gcapi.sy.kugou.com
 .gdfp.gifshow.com
-.gdh4szx.appspot.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gdtimg.com
@@ -4670,6 +4668,9 @@
 .getsquarebannerads-6egeg2u34q-du.a.run.app
 .getui.com
 .getui.net
+.getyour5kcredits0.blogspot.com
+.getyourgiftnow2.blogspot.com
+.getyourgiftnow3.blogspot.com
 .gfonts.jifo.co
 .gg-ads.b-cdn.net
 .gg.google.com
@@ -4758,6 +4759,7 @@
 .grs.platform.dbankcloud.ru
 .gru-col.eum-appdynamics.com
 .gscounters.gigya.com
+.gscounters.us1.gigya.com
 .gslbali.ximalaya.com
 .gsp1.baidu.com
 .gtglobal.intl.miui.com
@@ -4804,7 +4806,6 @@
 .haa3j9plpi-default-cn.rum.aliyuncs.com
 .haitaoad.nosdn.127.net
 .haiwai-ic.ksosoft.com
-.hao.360.cn
 .hao.uc.cn
 .hawk-assets.co.uk
 .hb-failover-stpceyl2ua-uw.a.run.app
@@ -4831,18 +4832,18 @@
 .hectorstatic.baidu.com
 .heoads.b-cdn.net
 .hesads.akamaized.net
-.hg76ytsdas.appspot.com
 .hiad.vmall.com
 .hiboardng.hicloud.com
 .hijack.baidu.com
 .hilton.data.adobedc.net
+.hir44.blogspot.com
+.hirszabadsag.blogspot.com
 .hisearch-dra.dt.dbankcloud.com
 .hisearch-drcn.dt.dbankcloud.com
 .hisearch-dre.dt.dbankcloud.com
 .hisearch-drru.dt.dbankcloud.com
 .historytrade.com
 .hits.theguardian.com
-.hj67fadszx.appspot.com
 .hjkhxfh.360doc.cn
 .hk.napi.ucweb.com
 .hk2.settings.data.microsoft.com.akadns.net
@@ -4921,10 +4922,8 @@
 .hk2sch130022135.wns.windows.com
 .hk2wns1.wns.windows.com
 .hk2wns1b.wns.windows.com
-.hk567rsda.appspot.com
 .hkjcweb.data.adobedc.net
 .hkrpg-log-upload.mihoyo.com
-.hksdf924pzxoias.appspot.com
 .hl2rcv.adobe.com
 .hlrcv.stage.adobe.com
 .hm.baidu.com
@@ -4936,7 +4935,6 @@
 .honey.io
 .hongkongbaptistuniversity.data.adobedc.net
 .hoplink.ksosoft.com
-.hosted.stats.com.edgesuite.net
 .hosts.vggwebsitetrackingprod.azurewebsites.net
 .hotchat-im.iqiyi.com
 .houyi.kkmh.com
@@ -4998,6 +4996,7 @@
 .hybrid.miniapp.taobao.com
 .hydra.alibaba.com
 .hydro-ma-proxy.akamaized.net
+.hydrocodone-buy-online.blogspot.com
 .hyndtren25.pages.dev
 .hyros-prod-tracking-elb-1961909740.us-east-1.elb.amazonaws.com
 .hz-telemetry.adobe.io
@@ -5188,7 +5187,6 @@
 .install.kugou.com
 .install2.kugou.com
 .instant-e-app-for-campaign.github.io
-.instory-log.ucnews.ucweb.com
 .int.dpool.sina.com.cn
 .intake-analytics.wikimedia.org
 .intake-logging.wikimedia.org
@@ -5233,13 +5231,11 @@
 .iwan-s.video.qq.com
 .iwan.sogou.com
 .iwanad.baidu.com
-.iwe8pzosa.appspot.com
 .iyes.youku.com
 .j.br.baidu.com
 .j.wit.qq.com
 .j0v36abmdj.execute-api.us-east-1.amazonaws.com
 .j2c03hoppk-default-cn.rum.aliyuncs.com
-.j3lbpcd9.r.us-east-1.awstrack.me
 .ja.gamersky.com
 .ja1.gamersky.com
 .ja2.gamersky.com
@@ -5253,7 +5249,6 @@
 .jcm.jd.com
 .jellyfish.pandora.xiaomi.com
 .jf365.boc.cn
-.jhqvy.app.link
 .jiagu.360.cn
 .jiayi1.oss-cn-shanghai.aliyuncs.com
 .jiguang.cn
@@ -5297,9 +5292,9 @@
 .k-ring-fallback.msedge.net
 .k-ring.msedge.net
 .k.qwant.com
-.k87yfgsdaa.appspot.com
 .kalstats.kaltura.com
 .kape.dataplane.rudderstack.com
+.karanpcofficial.blogspot.com
 .kargo.com
 .kbox-analytics-backup.s3-accelerate.amazonaws.com
 .kbox-analytics-prod.s3-accelerate.amazonaws.com
@@ -5310,7 +5305,6 @@
 .kew3pculob.data.adobedc.net
 .key.com.data.adobedc.net
 .kg.qq.com
-.kga9szxosa.appspot.com
 .kgb-ifs.tanx.com
 .kgipadstat.kugou.com
 .kgipadstatbak.kugou.com
@@ -5319,10 +5313,9 @@
 .kiks.yandex.ru
 .kinesis.eu-west-1.amazonaws.com
 .kinstruments-measurements.s3-external-1.amazonaws.com
-.kj65rdasz.appspot.com
-.kj6787rsd.appspot.com
 .kjapp.zol.com.cn
 .kjdsfjisdfjr23.azurewebsites.net
+.kjdvn1340-ads.blogspot.com
 .klclick1.com
 .klipmart.forbes.com
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
@@ -5332,7 +5325,6 @@
 .kmwatsonc.events.data.microsoft.com
 .knicks.jd.com
 .kq7rqzqxy4.data.adobedc.net
-.kr9apzxosa.appspot.com
 .kraken-measurements.s3-external-1.amazonaws.com
 .kroger.data.adobedc.net
 .ks-adaptive.pull.yximgs.com
@@ -5728,7 +5720,6 @@
 .mail-ads.google.com
 .mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
-.mailsupport-24f7f1500ed129bc71f2ad9c06fe1e73.pages.dev
 .maliva-mcs.byteoversea.com
 .mall.csdn.net
 .mam.netease.com
@@ -5742,7 +5733,6 @@
 .marketing.alibaba.com
 .marketing.dropbox.com
 .marketing.mangacopy.com
-.marketingplatform.google.com
 .marketingsolutions.yahoo.com
 .marketo.clearbit.com
 .marphezis.com
@@ -5770,6 +5760,7 @@
 .mazu.sec.miui.com
 .mb3-prod-collector-ext-alb-1946812883.us-east-1.elb.amazonaws.com
 .mbdlog.iqiyi.com
+.mbs.hao.360.cn
 .mbusa-server-side-tagging-ydw2gpju5q-ue.a.run.app
 .mc.weather.com.cn
 .mc.yandex.ru
@@ -5851,7 +5842,9 @@
 .metrics.powerreviews.com
 .metrics.proquest.com
 .metrics.rapidedge.io
+.metrics.rottentomatoes.com
 .metrics.ted.com
+.metrics.theatlantic.com
 .metrics.zacks.com
 .metrics1-drcn.dt.dbankcloud.cn
 .metrics1-drcn.dt.dbankcloud.com
@@ -5904,6 +5897,7 @@
 .mlbshop.com.data.adobedc.net
 .mllog.jd.com
 .mlog.search.xiaomi.net
+.mlpoo11-secondary.z13.web.core.windows.net
 .mlvbdc.live.qcloud.com
 .mm10mkavnh.data.adobedc.net
 .mmgame.qpic.cn
@@ -5959,6 +5953,7 @@
 .monitor.azure.com
 .monitor.music.qq.com
 .monitor.qq.com
+.mononoteapp.firebaseio.com
 .monorail-edge.shopifysvc.com
 .monsetting.toutiao.com
 .mosaicone-lb-telemetry-prod-56a065490ca45ae3.elb.us-east-1.amazonaws.com
@@ -6017,6 +6012,7 @@
 .mtga.setapp.com
 .mtj.baidu.com
 .mtrace.qq.com
+.mujib-store28.blogspot.com
 .multi-az-ulog.ksapisrv.com
 .mum.alibabachengdun.com
 .mum.alibabachengdun.net
@@ -6092,7 +6088,6 @@
 .nexusrules.officeapps.live.com
 .nexxtv-events.servicebus.windows.net
 .nfa.jd.com
-.nffdg43zx.appspot.com
 .nflshop.com.data.adobedc.net
 .nfsvgvusih.data.adobedc.net
 .nhtradecfg.eastmoney.com
@@ -6172,7 +6167,6 @@
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .ohm-dot-hackster-io.appspot.com
-.oi8ytfzxa.appspot.com
 .oimsgad.qq.com
 .omappapi.com
 .omes-sec.heytapmobi.com
@@ -6191,7 +6185,9 @@
 .onespot-tracking.herokuapp.com
 .onethingpcs.com
 .onezapp.com
+.online-forex-trading-systems.blogspot.com
 .online-metrix.net
+.online-pharmacy-online.blogspot.com
 .onrt-stsdk.vivo.com.cn
 .onrt-stsdk.vivoglobal.com
 .onthe.io
@@ -6241,6 +6237,7 @@
 .ossgw.alicdn.com
 .otf.msn.com
 .oth.eve.qq.com
+.otpercpiheno.blogspot.com
 .ott-v0-al.data.mgtv.com
 .ott.v1.data.mgtv.com
 .ott.video.qq.com
@@ -6259,6 +6256,7 @@
 .p.imgur.com
 .p.kugou.com
 .p.qiao.baidu.com
+.p.reuters.com
 .p.sardine.ai
 .p.skimresources.com
 .p.store.qq.com
@@ -6368,6 +6366,7 @@
 .performance.squarespace.com
 .permutive.app
 .permutive.com
+.peter-north-cum-shot.blogspot.com
 .petitions.whitehouse.gov
 .petrolprices-advertising.s3.eu-west-2.amazonaws.com
 .pf.events.data.microsoft.com
@@ -6415,6 +6414,7 @@
 .pgtus3-excel-telemetry-vip.officeapps.live.com
 .pgtus3-powerpoint-telemetry-vip.officeapps.live.com
 .pgtus3-word-telemetry-vip.officeapps.live.com
+.pharmacy-news.blogspot.com
 .phonograph2.voxmedia.com
 .phs.tanx.com
 .pi.ias.xiaomi.com
@@ -6496,6 +6496,7 @@
 .polaris5-normal-lq.zijieapi.com
 .policy.jd.com
 .policy.video.iqiyi.com
+.polish-money-matters.blogspot.com
 .polyfill.io
 .popcashjs.b-cdn.net
 .popme.163.com
@@ -6509,7 +6510,6 @@
 .posthog-proxy-service-prod-eu-bfb365ef029ea8b9.elb.eu-central-1.amazonaws.com
 .posthog-proxy-service-prod-us-786081f7c4028325.elb.us-east-1.amazonaws.com
 .posthog.com
-.postmediamontrealgazette2.files.wordpress.com
 .postrelease.com
 .powerad.ai
 .powerpoint-telemetry.officeapps.live.com
@@ -6524,7 +6524,6 @@
 .pr.nss.netease.com
 .pr.prnewswire.com
 .practivate.adobe.com
-.prd-lender.cdp.internal.unity3d.com
 .prd-usw2-requestattribution-iad.apple.com
 .prebid-collector-lb-321145981.eu-west-1.elb.amazonaws.com
 .prebid-server-production.herokuapp.com
@@ -6685,6 +6684,7 @@
 .rads.stackoverflow.com
 .rai-amp-telemetry-ingestion.azurewebsites.net
 .raine.accuweather.com
+.rapid-glade-cde8.asoumare042024.workers.dev
 .ras.yahoo.com
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
@@ -6858,7 +6858,6 @@
 .rum.us-west-2.amazonaws.com
 .rumt-zh.com
 .rus.miui.com
-.ruw82qpzxas.appspot.com
 .s-adashx.ut.uc.cn
 .s-ring-fallback.msedge.net
 .s-ring.msedge.net
@@ -7172,6 +7171,7 @@
 .shenghuo.xiaomi.com
 .shooter.m.jd.com
 .shop.wot.360.cn
+.shopeevn-affiliate.blogspot.com
 .shoppingcampaigns-api-drcn.ai.dbankcloud.com
 .shouji.360.cn
 .shouji.sogou.com
@@ -7214,7 +7214,6 @@
 .smartadserver.com
 .smartadserver.com.akamaized.net
 .smartadserver.com.edgesuite.net
-.smartlock.google.com
 .smetrics-cns.panasonic.com
 .smetrics.afpjobs.amazon.com
 .smetrics.bestbuy.com
@@ -7264,6 +7263,7 @@
 .soft.data.weather.360.cn
 .soft.tbs.imtt.qq.com
 .softstart.kugou.com
+.software19797.blogspot.com
 .somni.istockphoto.com
 .sony.com.data.adobedc.net
 .sonybivstatic-a.akamaihd.net
@@ -7331,7 +7331,6 @@
 .ssw.live.com
 .st-fly.b-cdn.net
 .st-offlinegame.vivo.com.cn
-.st5fdbvs.r.us-east-1.awstrack.me
 .staging-notify.sec.miui.com
 .staging.ai.api.xiaomi.com
 .star-randsrv.bsg.brave.com
@@ -7388,8 +7387,10 @@
 .stats.condenastdigital.com
 .stats.controld.com
 .stats.economist.com
+.stats.fastcompany.com
 .stats.fifthstarlabs.io
 .stats.figshare.com
+.stats.ign.com
 .stats.kaltura.com
 .stats.kde.org
 .stats.lineageos.org
@@ -7554,6 +7555,7 @@
 .tcd-log.m.jd.com
 .tce.alicdn.com
 .tci.oss-ap-southeast-1.aliyuncs.com
+.tcookie.usatoday.com
 .tcss.qq.com
 .tdc.qq.com
 .tdrec.youku.com
@@ -7631,7 +7633,6 @@
 .tinglog.baidu.com
 .tingyun.com
 .tiqcdn.com
-.tir94wepsdxox.appspot.com
 .titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.kugou.com
@@ -7723,7 +7724,6 @@
 .tr.p.360.cn
 .tr.price.com.hk
 .tr.www.cloudflare.com
-.tr54sdsazxas.appspot.com
 .trace-h5sdk-br.vivo.com.cn
 .trace-h5sdk.vivo.com.cn
 .trace.qq.com
@@ -7805,7 +7805,6 @@
 .trksvg.business.hsbc.com.hk
 .trtcmobileappprod.data.adobedc.net
 .tru.am
-.tru465rsda.appspot.com
 .trueanthem.com
 .ts-wn-log-bmggb9bcacbsd6df.westus-01.azurewebsites.net
 .tsb.data.adobedc.net
@@ -7813,6 +7812,7 @@
 .tsyndicate.com
 .ttpsdk.info
 .tttppp.oss-cn-guangzhou.aliyuncs.com
+.tudnodkel.blogspot.com
 .tui.gtimg.com
 .tui.weibo.com
 .tuijian.baidu.com
@@ -7992,7 +7992,6 @@
 .uve.weibo.com
 .uvgxhu.ezgif.com
 .uvk.3hentai.net
-.uy054eprsdoz.appspot.com
 .uyunad.com
 .uz-analysis.akamaized.net
 .v.alipayobjects.com
@@ -8035,6 +8034,7 @@
 .vf.startpage.com
 .vg07-met-vgwort-de.cdn.ampproject.org
 .vhotwsh.video.qq.com
+.viagra-pill.blogspot.com
 .video-ad.sm.cn
 .video-analytics-api.cloudinary.com
 .video-analytics.one-98d.workers.dev
@@ -8056,6 +8056,7 @@
 .videopush.baidu.com
 .view.zijieapi.com
 .views.hulu.com.akadns.net
+.vilaghelyzete.blogspot.com
 .virusinfo-cloudscan-cn.heytapmobi.com
 .visio-telemetry.officeapps.live.com
 .visioonline.nel.measure.office.net
@@ -8161,7 +8162,6 @@
 .weishi.baidu.com
 .wellpoint.data.adobedc.net
 .wenwenfeedapi.sogou.com
-.westus-0.in.applicationinsights.azure.com
 .wetracker.azurewebsites.net
 .weus2watcab01.blob.core.windows.net
 .weus2watcab02.blob.core.windows.net
@@ -8182,7 +8182,6 @@
 .win1710.ipv6.microsoft.com
 .win8.ipv6.microsoft.com
 .window-shoppers.azurewebsites.net
-.windowsphishingalert158.s3.amazonaws.com
 .winonexd.b-cdn.net
 .wip3.adobe.com
 .wise-novel-authority-logo.cdn.bcebos.com
@@ -8228,6 +8227,7 @@
 .wwis-dubc1-vip60.adobe.com
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
+.www.addtoany.com
 .www.info.redhat.com
 .www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
@@ -8247,7 +8247,6 @@
 .x.skimresources.com
 .x.weather.com
 .x9t7g4m2qk2.azurewebsites.net
-.xasf32easzx.appspot.com
 .xblgdvrassets3010.blob.core.windows.net
 .xc.mydrivers.com
 .xcf-bd-js.chuimg.com
@@ -8267,7 +8266,6 @@
 .xmaterial.tu.qq.com
 .xmpush.xiaomi.com
 .xne1ocient87zxz.360doc.cn
-.xoada0pzosa.appspot.com
 .xp.atlassian.com
 .xp2023-pix.s3.amazonaws.com
 .xpi.data.adobedc.net
@@ -8314,10 +8312,7 @@
 .ys2000.cdn.bcebos.com
 .yt-adp.nosdn.127.net
 .yt-adp.ws.126.net
-.ytuy45fxs.appspot.com
-.yu56tdfcxc.appspot.com
 .yuedu.iqiyi.com
-.yuhfdwesaa.appspot.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
 .yun.tim.qq.com
