--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-13 10:44:53
-# Total rules: 8388
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-13 18:07:58
+# Total rules: 8444
 
 .0a0d-d3l1vr.b-cdn.net
 .0gc6y58nkk.data.adobedc.net
@@ -567,6 +567,7 @@
 .abroad-ad.kingsoft-office-service.com
 .abroad.api.comm.intl.miui.com
 .abroadad.cache.wpscdn.com
+.abtest-cafe.io.naver.com
 .abtest-ch.snssdk.com
 .abtest.alibaba.com
 .abtest3-misc-lf.zijieapi.com
@@ -576,6 +577,7 @@
 .academy.com.data.adobedc.net
 .accscdn.m.taobao.com
 .acd.op.hicloud.com
+.ace.naver.com
 .acg.youku.com
 .acjs.aliyun.com
 .acookie.alimama.com
@@ -594,6 +596,7 @@
 .ad-api.cnblogs.com
 .ad-apigateway-ext-1951628128.us-west-2.elb.amazonaws.com
 .ad-assets.futurecdn.net
+.ad-creative.pstatic.net
 .ad-creatives-public.commondatastorage.googleapis.com
 .ad-dal-prd-1056964492.ap-northeast-1.elb.amazonaws.com
 .ad-delivery.net
@@ -654,6 +657,7 @@
 .ad.mh.163.com
 .ad.mi.com
 .ad.mobile.youku.com
+.ad.naver.com
 .ad.parkvv.com
 .ad.partner.gifshow.com
 .ad.player.baidu.com
@@ -715,6 +719,8 @@
 .adbs.ximalaya.com
 .adconsent.samsungrs.com
 .adcore.lenovomm.com
+.adcr.naver.com
+.adcreative.naver.com
 .addata.jd.com
 .ade-rtb.netease.com
 .adebus.oss-cn-shenzhen.aliyuncs.com
@@ -726,6 +732,7 @@
 .adfox.yandex.ru
 .adfstat.yandex.ru
 .adgame.waimai.meituan.com
+.adgbb.io.naver.com
 .adgeo.163.com
 .adgeo.corp.163.com
 .adgrx.com.tech.akadns.net
@@ -894,6 +901,7 @@
 .ads5-normal-lq.zijieapi.com
 .ads5-normal.zijieapi.com
 .adsafeprotected.com
+.adsapi.manhuaren.com
 .adsc.wasu.tv
 .adscdn.baidu.com
 .adsclick.qq.com
@@ -1197,6 +1205,7 @@
 .analytics.mpay.netease.com
 .analytics.msn.com
 .analytics.msnbc.msn.com
+.analytics.naver.com
 .analytics.nomarion.pp.ua
 .analytics.notify.elsevier.com
 .analytics.org.coveo.com
@@ -1361,6 +1370,7 @@
 .app-measurement.com
 .app-monitor.ele.me
 .app-preload.iqiyi.com
+.app-tracking-gfa-collector.naver.com
 .app.adjust.net.in
 .app.adjust.world
 .app.chat.xiaomi.net
@@ -1590,6 +1600,7 @@
 .bgg.baidu.com
 .bhv-analytics-prd-1854775698.us-east-1.elb.amazonaws.com
 .bhwkju.vivo.com
+.bi.manhuaren.com
 .bidease.b-cdn.net
 .bidmatic.io
 .bigdata-lbs-pri-c3.alb.xiaomi.com
@@ -1651,6 +1662,7 @@
 .bn4sch101123110.wns.windows.com
 .bn4sch101123202.wns.windows.com
 .bn4sch102110124.wns.windows.com
+.bnc-papago.naver.com
 .bnpp2s.data.adobedc.net
 .bobo.163.com
 .bobo.corp.163.com
@@ -1780,6 +1792,7 @@
 .calameo-beacon.global.ssl.fastly.net
 .calopenupdate.comm.miui.com
 .cam-analytics-service-435433079.us-west-2.elb.amazonaws.com
+.camp-api.naver.com
 .campaign-uploads.s3.amazonaws.com
 .campaign.adobe.com
 .cams.xvideos.com
@@ -1832,7 +1845,9 @@
 .cdn.tanx.com
 .cdn.usefathom.com
 .cdn1sitescout.edgesuite.net
+.cdn3.cartoonporn.to
 .cdn3.optimizely.com
+.cdn5.cartoonporn.to
 .cdna.sec.miui.com
 .cdnjs.cloudflare.com
 .cdnstats-a.akamaihd.net
@@ -1871,6 +1886,7 @@
 .cheap-web-hosting-here.blogspot.com
 .cheap-xanax-here.blogspot.com
 .cheezwhiz.z9.web.core.windows.net
+.chnsrv.com
 .choice.microsoft.com
 .chs-matomo-1238305517.eu-west-2.elb.amazonaws.com
 .cid-materials-cdn.smallfighter.com
@@ -2324,6 +2340,7 @@
 .cquotient.com
 .cr-status.iqiyi.com
 .cr.adobe.com
+.cr.naver.com
 .crab.baidu.com
 .crash.163.com
 .crash.steampowered.com
@@ -4369,6 +4386,7 @@
 .epoch-id.cdo.heytapmobi.com
 .epro.sogou.com
 .epro.sohu.com
+.er.search.naver.com
 .erebor.douban.com
 .ereg.adobe.com
 .err.taobao.com
@@ -4407,6 +4425,7 @@
 .eu-watsonc.events.data.microsoft.com
 .eu.business.samsung.com
 .eu.usefathom.com
+.euadsapi.manhuaren.com
 .euc-excel-telemetry.officeapps.live.com
 .euc-powerpoint-telemetry.officeapps.live.com
 .euc-visio-telemetry.officeapps.live.com
@@ -4421,6 +4440,7 @@
 .event.bblmw.com
 .event.condenastdigital.com
 .event.csdn.net
+.event.impression-neo.naver.com
 .event.ksosoft.com
 .event.zhihu.com
 .eventcollectorv2-1131000179.us-east-1.elb.amazonaws.com
@@ -4460,6 +4480,7 @@
 .exceptionlog.kugou.com
 .exchange.postrelease.com.akadns.net
 .exo.nel.measure.office.net
+.exoclick.com
 .exosrv.com
 .exp.notion.so
 .expendablekmr.kugou.com
@@ -4468,7 +4489,9 @@
 .experiments.apple.com
 .express-scripts.com.data.adobedc.net
 .expressscripts.data.adobedc.net
+.ext-cologger.shopping.naver.com
 .ext.baidu.com
+.external-api.impression-neo.naver.com
 .extlog.snssdk.com
 .f.convertkit.com
 .f.convertkit.com.cdn.cloudflare.net
@@ -5205,6 +5228,7 @@
 .insights.algolia.io
 .insights.cloud.microsoft
 .insitez.blob.core.windows.net
+.inspector-collector.m.naver.com
 .install.kugou.com
 .install2.kugou.com
 .instant-e-app-for-campaign.github.io
@@ -5234,6 +5258,7 @@
 .ip.sb
 .ip.taobao.com
 .ip.ws.126.net
+.ipada.cafe.naver.com
 .ipv4.kkmh.com
 .ipv4.music.163.com
 .ipv4only.arpa
@@ -5253,6 +5278,7 @@
 .iwan-s.video.qq.com
 .iwan.sogou.com
 .iwanad.baidu.com
+.iws2.io.naver.com
 .iyes.youku.com
 .j.br.baidu.com
 .j.wit.qq.com
@@ -5374,8 +5400,12 @@
 .kz-vcode-or.vivoglobal.com
 .l.create.canva.com
 .l.engage.canva.com
+.l.m.naver.com
+.l.msdl.naver.com
+.l.premium.naver.com
 .l.qq.com
 .l.support.canva.com
+.l.www.naver.com
 .l.ykimg.com
 .l.youku.com
 .l4-logs-http-browser-pub-s0-e2bce5ba2ff871a5.elb.us-east-1.amazonaws.com
@@ -5396,6 +5426,7 @@
 .lc-event.pixiv.net
 .lc-push.zhihu.com
 .lc.jiathis.com
+.lcs.naver.com
 .ldmwny4fum.data.adobedc.net
 .leads.baidu.com
 .leak.360.cn
@@ -5585,6 +5616,7 @@
 .logagent-wf-1069852758.us-west-2.elb.amazonaws.com
 .logapi-and.zhipin.com
 .logapi-ios.zhipin.com
+.logapi.tv.naver.com
 .logapi.zhipin.com
 .logbak.hicloud.com
 .logbk.amemv.com
@@ -5736,6 +5768,7 @@
 .m6ulblxep4.execute-api.us-east-1.amazonaws.com
 .ma-adx.ctrip.com
 .ma.baidu.com
+.ma.news.naver.com
 .ma.redhat.com
 .ma.zoho.com
 .macys.data.adobedc.net
@@ -6080,6 +6113,8 @@
 .nationalemaatschappijderbelgischespoorwegen.data.adobedc.net
 .nativead.s3.amazonaws.com
 .nativeapp.toutiao.com
+.naverpa-phinf.pstatic.net
+.naverwebtoon-phinf.pstatic.net
 .navi.gd.chinamobile.com
 .nba2k25-telemetry-prod-elb-1504653255.us-east-1.elb.amazonaws.com
 .nba2k26-telemetry-prod-elb-589225582.us-east-1.elb.amazonaws.com
@@ -6118,6 +6153,7 @@
 .nflshop.com.data.adobedc.net
 .nfsvgvusih.data.adobedc.net
 .nhtradecfg.eastmoney.com
+.nil.naver.com
 .ninja.akamaized.net
 .nitrous-analytics.s3.amazonaws.com
 .nj.t.bcsp2p.baidu.com
@@ -6158,6 +6194,7 @@
 .nsp-logservice-hiview-p50-drcn.obs.cn-north-2.myhuaweicloud.com
 .nsp-logservice-weardevice-p51-drcn.obs.cn-north-2.myhuaweicloud.com
 .nsureapi.com
+.ntracker-collector.naver.com
 .ntvcld-a.akamaihd.net
 .nvm6zgsnhj.data.adobedc.net
 .nw-umwatson.events.data.microsoft.com
@@ -6738,6 +6775,7 @@
 .recirculation.spot.im
 .recmd.html5.qq.com
 .recommend-drcn.hms.dbankcloud.cn
+.recoshopping.naver.com
 .redir.metaservices.microsoft.com
 .redirect.pandora.xiaomi.com
 .redirect.simba.taobao.com
@@ -6770,6 +6808,7 @@
 .report.imtt.qq.com
 .report.meeting.tencent.com
 .report.meituan.com
+.report.migufun.com
 .report.nfa.qq.com
 .report.qcloud.com
 .report.qq.com
@@ -6902,6 +6941,7 @@
 .s.img.mix.sina.com.cn
 .s.infogram.com
 .s.lenovo.com
+.s.news.naver.com
 .s.p.youku.com
 .s.skimresources.com
 .s.so.360.cn
@@ -6912,6 +6952,7 @@
 .s2013560044.sc.origins.en25.com
 .s2448.sc.origins.en25.com
 .s2564.sc.origins.en25.com
+.s3-nl-01.mangabuddy.in
 .s3-use1-epx-d-f1ev1-telemetry-dropbox.s3.amazonaws.com
 .s46849916.sc.origins.en25.com
 .s615419487.sc.origins.en25.com
@@ -6983,6 +7024,8 @@
 .scotiabank.data.adobedc.net
 .scribe.twitter.com
 .script.ac
+.scv-blog.io.naver.com
+.scv-cafe.io.naver.com
 .sd-tagging.azurefd.net
 .sdfp.snssdk.com
 .sdk-collector-prod-723125464.eu-central-1.elb.amazonaws.com
@@ -7023,6 +7066,7 @@
 .seao.business.samsung.com
 .search.anonymous.ads.brave.com
 .search.miui.com
+.searchad-phinf.pstatic.net
 .searchads.apple.com
 .searchads.google.com
 .searchlog.html5.qq.com
@@ -7051,7 +7095,9 @@
 .sensorsdata.cn
 .sentinelapi.vivo.com.cn
 .sentinelpro.com
+.sentry-apollo-fe.naver.com
 .sentry-cdn.com
+.sentry-fin.naver.com
 .sentry-new.myshopline.com
 .sentry.cointelegraph.com
 .sentry.d.xiaomi.net
@@ -7212,6 +7258,7 @@
 .shop.wot.360.cn
 .shopeevn-affiliate.blogspot.com
 .shoppingcampaigns-api-drcn.ai.dbankcloud.com
+.shopsquare.naver.com
 .shouji.360.cn
 .shouji.sogou.com
 .show-msgch.qq.com
@@ -7247,6 +7294,7 @@
 .skydeutschland.data.adobedc.net
 .skyshowtimeuk.data.adobedc.net
 .slb-p2p.vcloud.ks-live.com
+.slc.commerce.naver.com
 .slog.sina.cn
 .slog.sina.com.cn
 .sm.toutiao.com
@@ -7313,6 +7361,7 @@
 .sp-wukong-tracker.b-cdn.net
 .sp.ecosia.org
 .sp.nasdaq.com
+.sp.naver.com
 .sp.usatoday.com
 .sp0.baidu.com
 .sp1.baidu.com
@@ -7459,6 +7508,7 @@
 .statt-collect.herokuapp.com
 .statusapi.micloud.xiaomi.net
 .stdl.qq.com
+.stg-bnc-papago.naver.com
 .stickyadstv.com.akadns.net
 .stikroltiltoowi.net
 .stingcool-com.myshopify.com
@@ -7672,6 +7722,7 @@
 .tingyun.com
 .tiqcdn.com
 .titkoshirek.wordpress.com
+.tivan.naver.com
 .tj.b.qq.com
 .tj.kugou.com
 .tj.video.qq.com
@@ -7862,6 +7913,7 @@
 .tv.data.adobedc.net
 .tv.weixin.pandora.xiaomi.com
 .tveta.naver.net
+.tvetamovie.pstatic.net
 .tvmanager.pandora.xiaomi.com
 .tvmgr.pandora.xiaomi.com
 .tw.promo.yahoo.com
@@ -8067,6 +8119,7 @@
 .vegslb.com
 .vendorlist.consensu.org
 .venezia-measurements.s3-external-1.amazonaws.com
+.veta.naver.com
 .vf.startpage.com
 .vg07-met-vgwort-de.cdn.ampproject.org
 .vhotwsh.video.qq.com
@@ -8113,6 +8166,7 @@
 .volceapplog.com
 .volcsiriusbd.com
 .volkswagenofamerica.data.adobedc.net
+.volts.shopping.naver.com
 .vonage.data.adobedc.net
 .vortex-sandbox.data.microsoft.com
 .vortex-win.data.microsoft.com
@@ -8172,6 +8226,7 @@
 .wbdds.fr.ign.com
 .wbpctips.mobile.sina.cn
 .wcp.taobao.com
+.wcs.naver.com
 .wcs.naver.net
 .wct.softonic.com
 .wdfl.co
@@ -8194,6 +8249,7 @@
 .website-security.rapidssl.com
 .webstat.ws.126.net
 .webterren.com
+.webtoons.naver.com
 .webtracking-azfun-prod.azurewebsites.net
 .wegmansfoods.data.adobedc.net
 .weishi.baidu.com
