--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-15 19:31:33
-# Total rules: 8863
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-16 10:24:16
+# Total rules: 8851
 
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
 .0a0d-d3l1vr.b-cdn.net
@@ -1515,6 +1515,7 @@
 .b.smartvideo.youku.com
 .b2.mail.ru
 .b2binsider.adobe.com
+.b2c.com
 .b7tp47v2nb3x-a.akamaihd.net
 .babel-statistics-android.d.meituan.net
 .babes-mansion.s3.amazonaws.com
@@ -1859,6 +1860,7 @@
 .cdn5.cartoonporn.to
 .cdnimg.3g.qq.com
 .cdnstats-a.akamaihd.net
+.cdntm.hsbc.com.hk
 .cdnweb3.pages.dev
 .cdp.cloud.unity.cn
 .cdp.cloud.unity3d.com
@@ -2260,8 +2262,10 @@
 .consent.economist.com
 .consent.truste.com
 .contactapi.micloud.xiaomi.net
+.contendvc.cnouyi.pizza
 .content.rconfig.qq.com
 .content.yieldmanager.edgesuite.net
+.contentmx.okcoin.com
 .contentpass.net
 .contentrecommend-out.mobile.sina.cn
 .contextweb.com
@@ -3756,25 +3760,16 @@
 .data-sdk-uuid-log.d.meituan.net
 .data.aem-showcase-internal.adobe.com
 .data.aem-sites-internal.adobe.com
-.data.ajo-campaigns-e2e-ind2-ultimate.test.ajo.adobe.com
 .data.b2bmail.adobe.com
-.data.batch-accenture.test.ajo.adobe.com
 .data.batch-doc.test.ajo.adobe.com
 .data.batch-nab.test.ajo.adobe.com
-.data.batch-uhg.test.ajo.adobe.com
-.data.batch-wunderman.test.ajo.adobe.com
 .data.bilibili.com
 .data.corp.unity3d.com
 .data.customer-success-apac.adobe.com
 .data.diagnostics.office.com
-.data.digital.adobe.com
-.data.digitalmedia.adobe.com
 .data.dm.casio.com.data.adobedc.net
 .data.dm.casio.info.data.adobedc.net
 .data.e.adobe.com
-.data.e2eprod.repackage.test.ajo.adobe.com
-.data.e2eprod.repackagecan2.test.ajo.adobe.com
-.data.e2eprod.repackagenld2.test.ajo.adobe.com
 .data.em2.cloudflare.com
 .data.email-discovery.cjm.adobe.com
 .data.email-disney.cjm.adobe.com
@@ -3786,19 +3781,16 @@
 .data.email-tsb.cjm.adobe.com
 .data.email.podcast.adobe.com
 .data.emaillpb.adobe.com
-.data.employeecommunications.adobe.com
 .data.eu.pendo.io
-.data.fastlane-email.paypal.com
 .data.game.xiaomi.com
 .data.haoma.sogou.com
 .data.hicloud.com
+.data.messaging.paypal.com
 .data.msn.com
 .data.news.paypal.com
 .data.newsletter.paypal.com
 .data.pendo.io
 .data.qq.com
-.data.qr.test.ajo.adobe.com
-.data.sbux.test.ajo.adobe.com
 .data.sec.intl.miui.com
 .data.wunderman-email.cjm.adobe.com
 .datadoghq-browser-agent.com
@@ -4181,6 +4173,7 @@
 .drone-scanner-metrics.azurewebsites.net
 .drpf-edt.proxima.nie.netease.com
 .drulilqe8wg66.cloudfront.net
+.drupalmetrics.ppg.apple.com
 .drvdb9rcebidk.cloudfront.net
 .ds-aksb-a.akamaihd.net
 .ds02gfqy6io6i.cloudfront.net
@@ -4370,6 +4363,7 @@
 .elqtrk.tw.morningstar.com
 .em.baidu.com
 .email.realmadrid.com.data.adobedc.net
+.email.social.qualtrics.com
 .emarketing.sina.com.cn
 .embeds.beehiiv.com
 .emdcadvertise.eastmoney.com
@@ -5520,7 +5514,6 @@
 .l4-metrics-agent-s1-56401ca284db905a.elb.us-east-1.amazonaws.com
 .labadena.com
 .lacaixa.data.adobedc.net
-.landing.ultimate-success-emea.test.ajo.adobe.com
 .landingpage.emaillpb.adobe.com
 .lapin.ithome.com
 .larapush.com
@@ -5870,7 +5863,6 @@
 .lp.hol19.demoamericas275.adobe.com
 .lp.hol2.demoamericas275.adobe.com
 .lp.hol20.demoamericas275.adobe.com
-.lp.hol3.demoamericas275.adobe.com
 .lp.hol4.demoamericas275.adobe.com
 .lp.hol5.demoamericas275.adobe.com
 .lp.hol6.demoamericas275.adobe.com
@@ -6771,7 +6763,6 @@
 .pnekru6pxrum-a.akamaihd.net
 .pnrt-stsdk.vivo.com.cn
 .pnrt-stsdk.vivoglobal.com
-.podcast.e.adobe.com
 .podname.com
 .pointsdk.vivo.com.cn
 .polaris.zijieapi.com
@@ -6815,7 +6806,6 @@
 .predataclient.b-cdn.net
 .preferences-mgr.truste.com
 .preferences.truste.com
-.preferences.ubs.test.ajo.adobe.com
 .preload.xiaomi.com
 .presage.io
 .presence.teams.live.com
@@ -6842,7 +6832,6 @@
 .prod-server-side-tagging-oh25t3yxza-uc.a.run.app
 .prod-telemetry-10-archive.s3.eu-central-1.amazonaws.com
 .prod-track-edge-alb-1680312427.us-west-1.elb.amazonaws.com
-.prodregistryv2.org
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
 .prom.b.qq.com
@@ -7211,7 +7200,6 @@
 .s.c-ctrip.com
 .s.deepl.com
 .s.f.360.cn
-.s.gxv.test.ajo.adobe.com
 .s.hentaiforce.net
 .s.img.mix.sina.com.cn
 .s.infogram.com
@@ -7278,7 +7266,6 @@
 .sbbanner-com.cdn.ampproject.org
 .sbeacon.sina.com.cn
 .sc-analytics.appspot.com
-.sc-forbes.forbes.com
 .sc2.constantcontact.com
 .sca-cota.vivoglobal.com
 .sca-domaincfg.vivoglobal.com
@@ -7506,6 +7493,7 @@
 .sgp-ads-realmemobile-pubgw-863378568.ap-southeast-1.elb.amazonaws.com
 .sgtm.fastcompany.com
 .sgtm.jetbrains.com
+.sgtm.qualtrics.com
 .sgtm.siemens-home.bsh-group.com
 .sgtm.springer.com
 .sgtm.springernature.com
@@ -7550,6 +7538,7 @@
 .singular.net
 .sistr2.data.adobedc.net
 .site24x7rum.eu
+.siteintercept.qualtrics.com
 .siteintercept.qualtrics.com.cdn.cloudflare.net
 .sjarvis.taobao.com
 .sjh.baidu.com
@@ -7585,7 +7574,6 @@
 .smetrics.onetrust.com
 .smetrics.panasonic.com
 .smetrics.panasonic.jp
-.smetrics.proquest.com
 .smetrics.redhat.com
 .smetrics.samsung.com
 .smetrics.samsung.com.cn
@@ -7594,8 +7582,6 @@
 .smr.snssdk.com.w.cdngslb.com
 .sms.email-disney.cjm.adobe.com
 .sms.email-mobiledx.cjm.adobe.com
-.sms.rtcdpsummitlab.test.ajo.adobe.com
-.sms.ultimate-success-emea.test.ajo.adobe.com
 .smtrcs.redhat.com
 .snap.licdn.com
 .sngapm.qq.com
@@ -7636,7 +7622,6 @@
 .speedcurve.com
 .speee-ad.akamaized.net
 .spider-tracker.xiaohongshu.com
-.spike.email-disney.cjm.adobe.com
 .spinfo.wps.cn
 .spiritairlines.data.adobedc.net
 .splash-online-decision.xiaohongshu.com
@@ -8063,6 +8048,7 @@
 .tmfmazu4.m.qq.com
 .tmfmazuhttp-wangka.m.qq.com
 .tmfmazutcpv4.m.qq.com
+.tmfp.klarna.com
 .tmfsdk.m.qq.com
 .tmfsdk4.m.qq.com
 .tmfsdktcp.m.qq.com
@@ -8650,6 +8636,7 @@
 .widgets.coingecko.com
 .widgets.coinmarketcap.com
 .widgets.getpocket.com
+.widgixeu-beacon.s3.amazonaws.com
 .wildcard-ads-1269115353.eu-west-1.elb.amazonaws.com
 .wiley.com.data.adobedc.net
 .win10.ipv6.microsoft.com
@@ -8735,6 +8722,7 @@
 .xcf-bd-js.chuimg.com
 .xdcs-collector.ximalaya.com
 .xdrig.com
+.xga-serving-pa.googleapis.com
 .xgapromomanager-pa.googleapis.com
 .xgfe.snssdk.com
 .xhsci-hk-cos.xiaohongshu.net
