--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-17 09:54:12
-# Total rules: 9087
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-17 16:19:33
+# Total rules: 9090
 
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
 .0a0d-d3l1vr.b-cdn.net
@@ -5765,6 +5765,7 @@
 .lfhbragu2p.data.adobedc.net
 .lgad.cjpowercast.com.edgesuite.net
 .lgforbes.akamaized.net
+.lgrckt-in.com
 .lgsmartad.com
 .lgtvcommon.com
 .liadm.com
@@ -5790,6 +5791,7 @@
 .lm.licenses.adobe.com
 .lm.tv.sohu.com
 .lm1.tuliu.com
+.lma.npaw.com
 .lmbsy.qq.com
 .lmlicenses.wip4.adobe.com
 .lmsjy.qq.com
@@ -8205,6 +8207,7 @@
 .telemetry.urs.microsoft.com
 .telemetry.v.dropbox.com
 .telemetry.v3.influxdata.com
+.telemetry.vercel.com
 .telemetry.visualstudio.microsoft.com
 .telemetrydeck.com
 .temai.snssdk.com
