--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-12-20 09:17:55
-# Total rules: 11861
+# Generated from relevant_rules_wildcard_aware.txt on 2025-12-20 10:40:38
+# Total rules: 11862
 
 .08438rt742.netlify.app
 .09-0-2-erguj-3e54r9gh-w0e9jv-0sd8ghv-0das9jh-0hyf.obs.ap-southeast-1.myhuaweicloud.com
@@ -10737,6 +10737,7 @@
 .tinglog.baidu.com
 .tingtang.pages.dev
 .tingyun.com
+.tinypass.com
 .tiqcdn.com
 .titan-mt.pinduoduo.com
 .titan-ws.pinduoduo.com
